--- a/reservation/templates/reservation/tryReservation.html
+++ b/reservation/templates/reservation/tryReservation.html
@@ -133,7 +133,7 @@
         $(".payBtn").click(function () {
 
             // let amount = "{{totalPrice}}";
-            let amount = "{{totalPrice}}"; // 결제금액
+            let amount = "10"; // 결제금액
             let pay_method = $(this).data('method'); // 결제방법
             let user_id = "moonlit0130"; // 회원 아이디
             let playground = "{{playground}}"
