--- a/match/templates/personalMatching/personal.html
+++ b/match/templates/personalMatching/personal.html
@@ -7,6 +7,24 @@
 
 <link rel="stylesheet" href="{% static 'css/match2.css' %}">
 <style>
+    .nav-justified {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        font-weight: bold;
+        font-size: 0.75rem;
+        color: #8c8c8c;
+        background: #e1e1e1;
+        border-radius: 2px;
+    }
+    .nav-justified > .item {
+        position: relative;
+        box-sizing: content-box;
+        padding: 0.7rem 0.3rem;
+    }
+    .nav-justified > .item.active {
+        color: #131313;
+    }
     .sec.match .move_date {
         display: flex;
         justify-content: space-between;
@@ -149,10 +167,10 @@
 </span>
 
 <!--컨텐츠 영역-->
-<div class="sec match personal" style="max-width: 720px; margin: 60px auto;">
+<div class="sec match personal" style="max-width: 720px; margin: 0 auto;">
 
     <!-- 양쪽정렬된 탭 메뉴 -->
-    <ul class="nav-justified">
+    <ul class="nav-justified marginForNav">
         <li class="item active">
             <p class="txt">
                 <a href = "{% url 'personal' %}" style="text-decoration: none; color: #131313;">
@@ -289,15 +307,16 @@
     <input type="hidden" name = "day" id = "day">
 </form>
 <input type="hidden" id="Url" data-url="{% url 'personalDay' %}" />
-<div style="display: flex; flex-direction: row;">
+
+<div style="display: flex; flex-direction: row; justify-content: space-between;">
     <button type="button" class="btn move" style="margin-left:0; width: 10%; padding-left: 0;" onclick="prevWeek()">
-        <i class="fas fa-long-arrow-alt-left" style="color:#28AAE3"></i>
+        <i class="fas fa-long-arrow-alt-left" style="color:#28AAE3;"></i>
     </button>
-    <table id="chooseDate" boarder="3" text-align="center" style="padding:4em; width: 80%;">
+    <table id="chooseDate" boarder="3" text-align="center" style="padding:3em; width: 80%;">
         
     </table>
-    <button type="button" class="btn move" style="width: 10%;" onclick="nextWeek()">
-        <i class="fas fa-long-arrow-alt-right" style="color:#28AAE3"></i>
+    <button type="button" class="btn move" style="width: 10%; padding-right: 0;" onclick="nextWeek()">
+        <i class="fas fa-long-arrow-alt-right" style="color:#28AAE3;"></i>
     </button>
 </div>
 
@@ -312,7 +331,7 @@
                 </div>
                 <div class="group">
                     <button type="button" class="btn">
-                        <a href = "{% url 'personalNew' %}" style="text-decoration: none; color:white;">글쓰기</a>
+                        <a href = "{% url 'pCheckReservation' %}" style="text-decoration: none; color:white;">글쓰기</a>
                     </button>
                 </div>
             </div>
