--- a/FNSProject/templates/footer.html
+++ b/FNSProject/templates/footer.html
@@ -184,4 +184,11 @@
   "https://blog.naver.com/fbloverofficial";
   window.open(url, "_blank", "toolbar=yes, scrollbars=yes, resizable=yes, top=0, left=0, width=750, height=700;");
   }
+
+  function blogOpsfdasf()
+  {
+  var url =
+  "https://blog.naver.com/fbloverofficial";
+  window.open(url, "_blank", "toolbar=yes, scrollbars=yes, resizable=yes, top=0, left=0, width=750, height=700;");
+  }
 </script>
